--- a/content/post/2020-10-13-week3-mlr/index.Rmd
+++ b/content/post/2020-10-13-week3-mlr/index.Rmd
@@ -24,13 +24,13 @@ library(psych)
 
 # Multiple Linear Regression
 
-This week we will cover multiple linear regression. As in previous post and in any model that you want to do we will need to test our assumtions and follow some general steps 
+This week we will cover multiple linear regression. As in the previous post and in any model that you want to do we will need to test our assumptions and follow some general steps 
 
 Procedure to perform Multiple Linear Regression:
 
 1. Scatterplot matrix
 2. Fit multiple linear regression models
-3. Calculation estimate parameters, determine their standard errors, obtain tests and confidence intervals.
+3. Calculation estimate parameters, determine their standard errors, obtain tests, and confidence intervals.
 4. Evaluation and explanation
 
 Let's have our data
@@ -48,7 +48,7 @@ head(df,2)
 
 ## MLR Assumption (Independency)
 
-Simple linear regression does not require this test because it has one independent variable. In this chapter, we test linearity and independence of observations (autocorrelation) to determine that independent variables are not too hihgly correlated.
+Simple linear regression does not require this test because it has one independent variable. In this chapter, we test linearity and independence of observations (autocorrelation) to determine that independent variables are not too highly correlated.
 
 ```{r}
 cor(df$temperature,df$wind) #function to test the relationship between your independent variables
@@ -56,7 +56,7 @@ cor(df$temperature,df$wind) #function to test the relationship between your inde
 
 ## Normality and Linearity Assumptions 
 
-We still need to lest the other two assumption before the model. A function that will save us time is `chart.Correlation`, we can get **Marginal Response Plots** showing correlations and the significance of those correlations (independency), histograms and distributions (normality), and bivariate scatter plot with a fitted line (linearity). Although this does not test the normal distribution you can observe with histograms the distribution of your data for all your numeric variables and make some initial stimations. 
+We still need to lest the other two assumptions before the model. A function that will save us time is `chart.Correlation`, we can get **Marginal Response Plots** showing correlations and the significance of those correlations (independency), histograms and distributions (normality), and bivariate scatter plot with a fitted line (linearity). Although this does not test the normal distribution you can observe with histograms the distribution of your data for all your numeric variables and make some initial estimations. 
 
 ```{r}
 chart.Correlation(df[,-5], #numeric data set
@@ -72,7 +72,7 @@ my.correlation<-correlation.test$r # from the test get ($) the correlation value
 p.values.correlation<-correlation.test$p # from the test get ($) the correlation p values
 ```
 
-* Values close to 1 indicate that independent variables are nearly identical meaning that they do not meet the assumtions for multiple linear regression and should be treated or discharted.
+* Values close to 1 indicate that independent variables are nearly identical meaning that they do not meet the assumptions for multiple linear regression and should be treated or discarded.
 
 ## Regression fitting
 
@@ -82,9 +82,9 @@ fit.lm<-lm(bacterias~.,data=df) #all the variables
 summary(fit.lm)
 ```
 
-Breakdown of the results elements:
+Breakdown of the elemet of the result:
 
-* The estimates `(Estimate)` column gives you the change in y cause by each element of the regression. For `Intercept` or the value of the y when all the rest elements are 0 in this case 68.12 bacteria units on each test.Similarly, `temperature/rest of the variabels` show changes in y (population of bacteria) with one unit increase in `x`. In other words, temperature in the full model reduces bacteria population by -0.304 units for each increment in temperature if P < 0.05. Here it isnt so we can not reach that conclussion. 
+* The estimates `(Estimate)` column gives you the change in y caused by each element of the regression. For `Intercept` or the value of the `y` when all the rest elements are 0 in this case 68.12 bacteria units on each test. Similarly, `temperature/rest of the variables` show changes in y (population of bacteria) with one unit increase in `x`. In other words, the temperature in the full model reduces bacteria population by -0.304 units for each increment in temperature if P < 0.05. Here it is not so we can not reach that conclusion. 
 
 * The standard error of the estimated values in the second column `Std. Error`.
 * The test statistic `t value`.
@@ -93,7 +93,7 @@ Breakdown of the results elements:
 
 ## Model test (Homoscedasticity)
 
-We should ensure that the model fited meets this last assumption, same variance, to maintain the model. The error term needs to be the same across all values of the independent variables.
+We should ensure that the model fitted meets this last assumption, the same variance, to maintain the model. The error term needs to be the same across all values of the independent variables.
 
 ```{r}
 par(mfrow=c(2,2))
@@ -101,15 +101,15 @@ plot(fit.lm)
 par(mfrow=c(1,1))
 ```
 
-Here we can see that the resudial erros are constant across groups and they are distributed evenly. Look at the `Normal Q-Q` (top right) which under homoscedasticity it should show points along the line.
+Here we can see that the residial errors are constant across groups and they are distributed evenly. Look at the `Normal Q-Q` (top right) which under homoscedasticity it should show points along the line.
 
 ## Leverage and extrapolation
 
-Leverage h is a quantity solely depend on the predictors for all the cases in the data without any respect with responses. Leverage hi is called the leverage of observation i. It indicates the **“pull”** an observation has on the regression fit. 
+Leverage h is a quantity solely dependent on the predictors for all the cases in the data without any respect for responses. Leverage hi is called the leverage of observation i. It indicates the **“pull”** an observation has on the regression fit. 
 
 Let's look at that pull for different points.
 
 <iframe height="1000" width="80%" frameborder="no" src="https://roberto-supe.shinyapps.io/leverage_statsBNU/"> </iframe>
 
->Cases with large leverages should be inspected to make sure there are not errors in the data or other problems. We will show some methods to deal with them in the following posts
+>Cases with large leverages should be inspected to make sure there are no errors in the data or other problems. We will show some methods to deal with them in the following posts
 
